Added  registration, activation code and resend activation code requests

--- a/app/src/main/res/layout/fragment_register_worker_agent.xml
+++ b/app/src/main/res/layout/fragment_register_worker_agent.xml
@@ -12,6 +12,27 @@
         android:paddingEnd="20dp"
         android:paddingStart="20dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:src="@drawable/arrow_back"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/xaba_red_logo"/>
+
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
