--- a/app/src/main/res/layout/fragment_register_complete.xml
+++ b/app/src/main/res/layout/fragment_register_complete.xml
@@ -39,7 +39,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/your_referral_id_is"
                 android:textColor="@color/dark_color"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
