init my profile gender icon depending on user gender

--- a/app/src/main/res/drawable/ic_round_genre_female.xml
+++ b/app/src/main/res/drawable/ic_round_genre_female.xml
@@ -3,9 +3,9 @@
     <item
         android:drawable="@drawable/circle_green"/>
     <item
-        android:drawable="@drawable/ic_genre"
+        android:drawable="@drawable/ic_genre_female"
         android:bottom="8dp"
-        android:left="8dp"
-        android:right="8dp"
+        android:left="10dp"
+        android:right="10dp"
         android:top="8dp"/>
 </layer-list>
