--- a/app/src/main/res/layout/fragment_wizard_step_three.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_three.xml
@@ -23,10 +23,11 @@
 
         <ImageView
             android:id="@+id/video"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:background="@color/green_color"/>
+            android:src="@drawable/wizard_step_3"/>
 
     </LinearLayout>
 
