--- a/app/src/main/res/drawable/selector_navigation.xml
+++ b/app/src/main/res/drawable/selector_navigation.xml
@@ -9,6 +9,6 @@
 
     <item android:color="@color/green_color" android:state_pressed="true"/>
 
-    <item android:color="@android:color/transparent"/>
+    <item android:color="@color/text_gray"/>
 
 </selector>
