--- a/app/src/main/res/layout/fragment_wizard_step_two.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_two.xml
@@ -1,87 +1,93 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingEnd="30dp"
-    android:paddingStart="30dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingEnd="30dp"
+        android:paddingStart="30dp">
 
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/arrow_back"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/wizard_step_2"/>
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/arrow_back"/>
+
+            <ImageView
+                android:id="@+id/video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/wizard_step_2"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:text="@string/how_to_get_an_account"
+                android:textColor="@color/dark_color"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/green_line"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard"
+                android:textColor="@color/dark_color"
+                android:textSize="18sp"/>
+
+            <Button
+                android:id="@+id/register"
+                style="@style/ButtonLinkStyle"
+                android:layout_marginTop="30dp"
+                android:text="@string/register_now"/>
+
+            <Button
+                android:id="@+id/next"
+                style="@style/ButtonGreenStyle"
+                android:layout_marginTop="10dp"
+                android:text="@string/next"/>
+
+            <Button
+                android:id="@+id/log_in"
+                style="@style/ButtonLinkStyle"
+                android:layout_marginTop="5dp"
+                android:text="@string/login_in"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:text="@string/how_to_get_an_account"
-            android:textColor="@color/dark_color"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/green_line"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard"
-            android:textColor="@color/dark_color"
-            android:textSize="18sp"/>
-
-        <Button
-            android:id="@+id/register"
-            style="@style/ButtonLinkStyle"
-            android:layout_marginTop="30dp"
-            android:text="@string/register_now"/>
-
-        <Button
-            android:id="@+id/next"
-            style="@style/ButtonGreenStyle"
-            android:layout_marginTop="10dp"
-            android:text="@string/next"/>
-
-        <Button
-            android:id="@+id/log_in"
-            style="@style/ButtonLinkStyle"
-            android:layout_marginTop="5dp"
-            android:text="@string/login_in"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
