--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="text_green">#76bd1d</color>
     <color name="text_light_gray">#747474</color>
     <color name="text_dark_gray">#353535</color>
+    <color name="text_white">#ffffff</color>
 
     <color name="light_green">#eaf5dd</color>
     <color name="profession_green">#d3ebb4</color>
