--- a/app/src/main/res/layout/dialog_delete_account.xml
+++ b/app/src/main/res/layout/dialog_delete_account.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
+    android:padding="25dp"
     android:orientation="vertical">
 
     <TextView
-
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="13dp"
+        android:textSize="22dp"
+        android:textColor="@color/text_semi_dark_gray"
+        android:lineSpacingExtra="5dp"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Are you sure you want to delete your account?" />
+        android:text="@string/are_you_sure_you_want_to_delete_your_account" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            android:textAllCaps="false"
             android:textColor="@color/text_green"
+            android:textSize="14sp"
             android:background="@drawable/bg_white_rect_green_border"
-            android:text="Cancel"/>
+            android:text="@string/cancel"/>
 
-        <!--<android.support.v4.widget.Space-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content" />-->
+        <android.support.v4.widget.Space
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            android:textAllCaps="false"
             android:textColor="@color/text_white"
-            android:background="#ff0000"
-            android:text="Delete"/>
+            android:textSize="14sp"
+            android:background="@color/red"
+            android:text="@string/delete"/>
 
     </LinearLayout>
 
