--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,12 @@
     <color name="gray">#e7e7e8</color>
     <color name="gray_light">#ececec</color>
     <color name="dark_text_color">#2a2a2a</color>
+    <color name="red">#e51f28</color>
 
     <color name="text_red">#e51f28</color>
     <color name="text_black">#000000</color>
     <color name="text_gray">#4d4d4d</color>
+    <color name="text_semi_dark_gray">#505050</color>
     <color name="text_green">#76bd1d</color>
     <color name="text_light_gray">#747474</color>
     <color name="text_dark_gray">#353535</color>
