--- a/app/src/main/res/layout/fragment_wizard_step_three.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_three.xml
@@ -25,13 +25,27 @@
                 android:layout_marginTop="20dp"
                 android:src="@drawable/arrow_back"/>
 
-            <ImageView
-                android:id="@+id/video"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:id="@+id/video_frame_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/wizard_step_3"/>
+                android:layout_marginTop="30dp">
+
+                <VideoView
+                    android:id="@+id/video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center_horizontal"/>
+
+                <ImageButton
+                    android:id="@+id/play_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@null"
+                    android:src="@drawable/play_button"/>
+
+            </FrameLayout>
 
         </LinearLayout>
 
