--- a/app/src/main/res/layout/row_edit_profile_profession.xml
+++ b/app/src/main/res/layout/row_edit_profile_profession.xml
@@ -8,7 +8,7 @@
     android:padding="10dp">
 
     <LinearLayout
-        android:id="@+id/grp_industry"
+        android:id="@+id/grp_industry_wrap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -21,6 +21,7 @@
             android:textSize="16sp"/>
 
         <LinearLayout
+            android:id="@+id/grp_industry"
             style="@style/SpinnerLayoutStyle"
             android:layout_marginTop="10dp">
 
@@ -37,7 +38,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/grp_category"
+        android:id="@+id/grp_category_wrap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -51,6 +52,7 @@
             android:textSize="16sp"/>
 
         <LinearLayout
+            android:id="@+id/grp_category"
             style="@style/SpinnerLayoutStyle"
             android:layout_marginTop="10dp">
 
