--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,12 +2,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_x"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingEnd="30dp"
@@ -32,6 +31,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="@string/please_enter_your_national_id_and_pin_to_login"
+            android:textColor="@color/dark_color"
             android:textSize="20sp"/>
 
         <EditText
