--- a/app/src/main/res/layout/fragment_register_confirm.xml
+++ b/app/src/main/res/layout/fragment_register_confirm.xml
@@ -3,12 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingLeft="30dp"
