--- a/app/src/main/res/layout/fragment_wizard_step_three.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_three.xml
@@ -52,6 +52,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="40dp"
             android:layout_weight="3"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -60,7 +61,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="50dp"
                 android:text="@string/refer_someone_to_get_rewards"
                 android:textColor="@color/dark_color"
                 android:textSize="20sp"
@@ -69,14 +69,14 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="25dp"
                 android:src="@drawable/green_line"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="25dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="@string/with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions"
@@ -85,7 +85,7 @@
 
             <Button
                 style="@style/ButtonLinkStyle"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="25dp"/>
 
             <Button
                 android:id="@+id/register"
@@ -96,6 +96,7 @@
             <Button
                 android:id="@+id/log_in"
                 style="@style/ButtonLinkStyle"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/login_in"/>
 
