--- a/app/src/main/res/layout/fragment_wizard_step_two.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_two.xml
@@ -51,6 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="40dp"
             android:layout_weight="3"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -59,7 +60,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="50dp"
                 android:text="@string/how_to_get_an_account"
                 android:textColor="@color/dark_color"
                 android:textSize="20sp"
@@ -68,14 +68,14 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="25dp"
                 android:src="@drawable/green_line"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="25dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="@string/with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard"
@@ -85,7 +85,7 @@
             <Button
                 android:id="@+id/register"
                 style="@style/ButtonLinkStyle"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="25dp"
                 android:text="@string/register_now"/>
 
             <Button
@@ -97,6 +97,7 @@
             <Button
                 android:id="@+id/log_in"
                 style="@style/ButtonLinkStyle"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/login_in"/>
 
