--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,6 +9,5 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         app:first_value="50"
-        app:second_value="30"
-        />
+        app:second_value="30" />
 </LinearLayout>
