--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,14 +38,14 @@
             android:id="@+id/national_id"
             style="@style/EditTextStyle"
             android:layout_marginTop="20dp"
-            android:hint="@string/national_id"
+            android:hint="@string/national_id_colon"
             android:inputType="number"/>
 
         <EditText
             android:id="@+id/pin_code"
             style="@style/EditTextStyle"
             android:layout_marginTop="15dp"
-            android:hint="@string/pin_code"
+            android:hint="@string/pin_code_colon"
             android:inputType="number"/>
 
         <Button
