--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="gray_light">#ececec</color>
     <color name="dark_text_color">#2a2a2a</color>
     <color name="red">#e51f28</color>
+    <color name="green">#d9f2ba</color>
+
 
     <color name="text_red">#e51f28</color>
     <color name="text_black">#000000</color>
