--- a/app/src/main/res/layout/fragment_wizard_step_two.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_two.xml
@@ -76,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="25dp"
+                android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="@string/with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard"
