--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,7 @@
     <color name="profession_green">#d3ebb4</color>
 
     <color name="dashboard_light_gray">#f2f2f2</color>
+    <color name="dashboard_dark_gray">#d4d4d4</color>
+    <color name="dashboard_text_gray">#4b4b4b</color>
 
 </resources>
