--- a/app/src/main/res/layout/fragment_register_worker_agent.xml
+++ b/app/src/main/res/layout/fragment_register_worker_agent.xml
@@ -8,60 +8,68 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f4f4f4"
-        android:orientation="vertical"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp">
+        android:orientation="vertical">
 
         <include layout="@layout/register_layout"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/pin_code"
-            android:textColor="@color/dark_color"
-            android:textSize="16sp"/>
+            android:background="#f4f4f4"
+            android:orientation="vertical"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp">
 
-        <EditText
-            android:id="@+id/pin_code"
-            style="@style/EditTextStyle"
-            android:layout_marginTop="10dp"
-            android:inputType="number"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/pin_code"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/confirm_pin_code"
-            android:textColor="@color/dark_color"
-            android:textSize="16sp"/>
+            <EditText
+                android:id="@+id/pin_code"
+                style="@style/EditTextStyle"
+                android:layout_marginTop="10dp"
+                android:inputType="number"/>
 
-        <EditText
-            android:id="@+id/confirm_pin_code"
-            style="@style/EditTextStyle"
-            android:layout_marginTop="10dp"
-            android:inputType="number"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/confirm_pin_code"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/referral_code"
-            android:textColor="@color/dark_color"
-            android:textSize="16sp"/>
+            <EditText
+                android:id="@+id/confirm_pin_code"
+                style="@style/EditTextStyle"
+                android:layout_marginTop="10dp"
+                android:inputType="number"/>
 
-        <EditText
-            android:id="@+id/referral_code"
-            style="@style/EditTextStyle"
-            android:layout_marginTop="10dp"
-            android:inputType="number"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/referral_code"
+                android:textColor="@color/dark_color"
+                android:textSize="16sp"/>
 
-        <Button
-            android:id="@+id/register"
-            style="@style/ButtonGreenStyle"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/register"/>
+            <EditText
+                android:id="@+id/referral_code"
+                style="@style/EditTextStyle"
+                android:layout_marginTop="10dp"
+                android:inputType="number"/>
+
+            <Button
+                android:id="@+id/register"
+                style="@style/ButtonGreenStyle"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/register"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
