--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#e7e7e8</color>
+    <color name="gray_divider">#e5e5e5</color>
     <color name="gray_light">#ececec</color>
     <color name="dark_text_color">#2a2a2a</color>
     <color name="red">#e51f28</color>
@@ -24,6 +25,7 @@
     <color name="text_green">#76bd1d</color>
     <color name="text_light_gray">#747474</color>
     <color name="text_dark_gray">#353535</color>
+    <color name="text_semi_light_gray">#c8c8c8</color>
     <color name="text_white">#ffffff</color>
 
     <color name="light_green">#eaf5dd</color>
