--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -41,7 +41,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="11sp"
+                    android:textSize="11sp"
                     android:textStyle="bold"
                     tools:text="PAYOUT DONE"
                     tools:textColor="@color/text_green" />
