--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -43,6 +43,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/txt_ballance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="700"
@@ -82,6 +83,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/txt_registered_workers"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="12.575"
@@ -146,6 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="54680321"
+                android:id="@+id/txt_referral_id"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
