--- a/app/src/main/res/layout/row_edit_profile_profession.xml
+++ b/app/src/main/res/layout/row_edit_profile_profession.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/profession_green"
     android:orientation="vertical"
+    android:layout_marginTop="10dp"
     android:padding="10dp">
 
     <LinearLayout
